# 31.2

./: pyproject.toml  pytest.ini
ads/: models.py  permissions.py  serializers.py  validators.py
ads/migrations/: 0001_initial.py  0002_initial.py  0003_category_slug.py  0004_alter_category_slug.py  0005_alter_category_slug.py  0006_alter_category_slug.py  0007_alter_category_slug.py  0008_alter_category_slug.py  0009_alter_category_slug.py  0010_alter_category_slug.py  0011_alter_category_slug.py  0012_alter_category_slug.py  0013_alter_category_slug.py  0014_alter_category_slug.py  0015_alter_ad_description_alter_ad_name.py  0016_alter_ad_image.py  0017_alter_ad_is_published.py
ads/url/: ad.py
ads/views/: ad.py  cat.py
dz_27/: urls.py
selection/: models.py
selection/migrations/: 0001_initial.py  0002_initial.py
tests/: conftest.py  facrtories.py  fixtures.py
tests/ad/: created_ad_test.py  detail_ad_test.py  list_ad_test.py
tests/selections/: created_selection_test.py
users/: models.py  serializers.py  validators.py  views.py
users/migrations/: 0001_initial.py  0002_user_birth_date.py  0003_alter_user_birth_date_alter_user_email.py  0004_alter_user_email.py  0005_alter_user_birth_date.py
utils/: utils.py
